# fs_genai

./: .gitignore  pyproject.toml
lib/: Untitled.ipynb  embedding.py  integration.py
